# Nullify

./: .gitignore  README.md  eslint.config.mjs  manifest.json  package-lock.json  package.json  webpack.config.js
.github/workflows/: build.yml  test.yml
docs/: IMPLEMENTATION.md  RELEASE_CHECKLIST.md  REVIEW.md
rules/: cosmetic-rules.json  system-unbreak.json
scripts/: build-rules.mjs  build-rules.test.mjs  generate-psl.mjs  generate-sri-hashes.mjs  version.mjs
src/background/: service-worker.js  youtube-shield-sync.js
src/content/: content-main.js  cosmetic-engine.js  element-picker.js  youtube-shield.js
src/options/: options.css  options.html  options.js
src/popup/: popup.css  popup.html  popup.js
src/scriptlets/: abort-current-inline-script.js  abort-on-property-read.js  abort-on-property-write.js  abort-on-stack-trace.js  add-class.js  adjust-set-interval.js  adjust-set-timeout.js  battery-spoof.js  bot-stealth.js  disable-newtab-links.js  fingerprint-noise.js  hide-window-error.js  index.js  json-prune.js  m3u-prune.js  no-fetch-if.js  no-set-interval-if.js  no-set-timeout-if.js  no-window-open-if.js  no-xhr-if.js  noeval.js  object-prune.js  persona-spoof.js  prevent-add-event-listener.js  prevent-fetch.js  prevent-window-open.js  prevent-xhr.js  remove-attr.js  remove-class.js  remove-cookie.js  set-constant.js  set-cookie-reload.js  set-cookie.js  set-local-storage-item.js  set-session-storage-item.js  shared-utils.js  spoof-css.js  trusted-click-element.js  trusted-replace-fetch-response.js  trusted-set-constant.js
src/shared/: bloom.js  core-filter-source.js  core-filter-source.test.mjs  db.js  filter-parser.js  hostname.js  hostname.test.mjs  psl.js  storage.js  wasm-loader.js
tests/sw-harness/: chrome-stub.mjs  chrome-stub.test.mjs  youtube-shield-sync.test.mjs
wasm-core/: Cargo.toml
wasm-core/src/: lib.rs  psl_generated.rs
