[package]
name = "nullify-core"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust/WASM core for Nullify ad-blocker"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
# Fast hashing
rustc-hash = "1.1"

[profile.release]
# Optimize for small size
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
