[package]
name = "nullify-core"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust/WASM core for Nullify ad-blocker"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.4"
# Fast hashing
rustc-hash = "1.1"
# Advanced matching
aho-corasick = "1.0"
# Statistical noise (using seeded RNG to avoid getrandom JS issues)
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"
getrandom = { version = "0.2", features = ["js"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
# Optimize for small size
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
